<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Project KP</string>
    <string name="main_name">Temp App</string>
    <string name="second_name">Aplikasi Project KP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="continue_inside">Continue</string>
    <string name="signup">Sign Up</string>
    <string name="signmeup">Sign Up Here</string>
    <string name="forget">Forget Password?</string>
    <string name="fullname">Full Name</string>
    <string name="login_again">Login Again</string>
    <string name="login_here">Login Here</string>
    <string name="login_again_text">Already have account?</string>
    <string name="welcome_login">Welcome User\nPlease login to continue</string>
    <string name="welcome_register">Welcome User\nPlease Input your data below</string>
    <string name="forget_password">Forget your Password?</string>
    <string name="forget_desc">Please type your email below\nto reset the password</string>
    <string name="reset">Reset</string>
    <string name="sms_desc">via sms:</string>
    <string name="email_desc">via email:</string>
    <string name="reset_password">Password Reset Sent!</string>
    <string name="reset_success_desc">We have sent reset password to your email. Please check your email to proceed.</string>
    <string name="email_success_desc">We have sent verification to your email. Please check your email to proceed before continue.</string>
    <string name="verify_email">Verify your email address</string>
    <string name="hey">Hi</string>
    <string name="email_verify_desc">Please verify your email address by clicking button below</string>
    <string name="verify">Verify</string>
    <string name="email_verified">Email Verified!</string>
    <string name="change_acc">Change Account</string>
    <string name="reset_sent">Reset password is sent</string>
    <string name="email_verify_sent">Verification email is sent</string>
    <string name="email_verify_not_sent">Please check your email to verify</string>
    <string name="cant_empty">Can\'t be empty</string>
    <string name="weak_password">Password too weak</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="max_name">Username too long</string>
    <string name="min_name">Require at least 4 characters</string>
    <string name="alphanum">Only alphabetic and numeric are allowed</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="no_user">User Not Found!</string>
    <string name="logout">Logout</string>
    <string name="sent_verify_email">Email verification sent!</string>
    <string name="user_exist">This username is already used</string>
    <string name="register_success">Sign Up Successfully</string>
    <string name="track_order">Track Order</string>
    <string name="input_myir">Input MYIR</string>
    <string name="product">Product</string>
    <string name="detail">Detail</string>
    <string name="minipack">MiniPack</string>
    <string name="upgrade">Upgrade</string>
    <string name="stb">2nd STB</string>
    <string name="duap">2P - 3P</string>
    <string name="Hu_2p">Hu - 2P</string>
    <string name="welcome_dashboard">Welcome back</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="search_myir">Search MYIR</string>
    <string name="role">Register as:</string>
    <string name="check_email">Please check your email to verify</string>
    <string name="acc_permission">Please accept for required permission</string>
    <string name="pick_role">Have to choose a role</string>
    <string name="retry">Retry</string>
    <string name="photo_updated">Profile Photo Updated</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="english">English</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_acc">Delete Account</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_success">Profile Updated</string>
    <string name="update_photo_error">Error when updating photo profile</string>
    <string name="myir">myir</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add item</string>
    <string name="detail_product">Detail Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="no_photo">No photo selected</string>
    <string name="wait">Please wait</string>
    <string name="product_speed">Speed</string>
    <string name="product_price">Price</string>
    <string name="deviceTV">Device:</string>
    <string name="product_title">Title</string>
    <string name="delete_item">Delete Product</string>
    <string name="internet_phone">2P\n(Internet + Phone)</string>
    <string name="internet_tv">2P\n(Internet + TV)</string>
    <string name="internet_phone_tv">3P\n(Internet + Phone + TV)</string>
    <string name="orbit">Telkomsel Orbit</string>
    <string name="guru_pelajar">Guru dan Pelajar</string>
    <string name="input_sc">Input SC</string>
    <string name="input_detail_sc">Input Detail</string>
    <string name="acc_delete">Account deleted</string>
    <string name="delete_acc_alert">Are you sure you want to delete your account?</string>
    <string name="delete_item_alert">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="period">/month</string>
    <string name="periodTV">Period (days):</string>
    <string name="channelTV">Channel:</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_desc">Please fill data below to add new product</string>
    <string name="add_follup_desc">Please fill data below to follow up order</string>
    <string name="edit_product_desc">Please fill data below to edit product</string>
    <string name="data_not_found">Data Not Found!</string>
    <string name="add_item_success">Product Added</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_product">Edit Product</string>
    <string name="edit_item_success">Product Edited</string>
    <string name="device">Device</string>
    <string name="channel">Channel</string>
    <string name="periodTime">Period</string>
    <string name="productTV">Product: </string>
    <string name="days">days</string>
    <string name="product_exist">This Product is already exist</string>
    <string name="delete_product_success">Product Deleted</string>
    <string name="delete_myir_success">MYIR Deleted</string>
    <string name="search_here">Search Here</string>
    <string name="add">Add</string>
    <string name="not_found">Not Found</string>
    <string name="user">User</string>
    <string name="bonus_product">Product Bonus</string>
    <string name="tv_bonus">110 Channel\n(91 SD + 19 HD)</string>
    <string name="useetv_bonus">Free Access\nUsee TV Go</string>
    <string name="bonus_included">Package Already Included:</string>
    <string name="phone_bonus">Free 300 Minutes\nLocale/Inter Locale</string>
    <string name="free_to_choose">Free to Choose Bonus Below</string>
    <string name="kids">Kids</string>
    <string name="inputer">by:</string>
    <string name="myirTV">MYIR-</string>
    <string name="add_myir">Add MYIR</string>
    <string name="add_myir_input">Type MYIR Here</string>
    <string name="submit">Submit</string>
    <string name="myir_exist">MYIR already exist</string>
    <string name="add_myir_success">MYIR added to the list</string>
    <string name="edit_myir">Edit MYIR</string>
    <string name="myir_edited">MYIR edited</string>
    <string name="myir_not_found">MYIR not Found</string>
    <string name="cant_edit_item">You can\'t edit this item</string>
    <string name="cant_delete_item">You can\'t delete this item</string>
    <string name="input_order">Input Order</string>
    <string name="follow_up">Follow Up Order</string>
    <string name="copas">copied to clipboard</string>
    <string name="delete_order_item">Delete Order</string>
    <string name="delete_order_item_alert">Are you sure you want to delete this order?</string>
    <string name="delete_order_success">Order deleted</string>
    <string name="oder_exist">This order already exist</string>
    <string name="delete_myir">Delete MYIR</string>
    <string name="add_follup">Follow Up</string>
    <string name="status">Status</string>
    <string name="sales_code">Sales Code</string>
    <string name="sc_result">SC Result</string>
    <string name="foll_up">Follow Up</string>
    <string name="order_exist">This order already exist</string>
    <string name="foll_up_success">Follow up Order Success</string>
    <string name="result">Result</string>
    <string name="statusTV">Status:</string>
    <string name="order_detail">Order Detail</string>
    <string name="sales_idTV">Sales Code:</string>
    <string name="copy">Copy</string>
    <string name="close">Close</string>
    <string name="order_not_found">Order Not Found</string>
    <string name="sc_copied">SC Result copied to clipboard</string>
    <string name="foll_up_edit">Order Edited success</string>
    <string name="sc_resultTV">SC Result:</string>
    <string name="all">All</string>
    <string name="finish">Finished</string>
</resources>