<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetpassword.ForgetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_keyboard_backspace_24"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/go_back_email_verify"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="100dp"
                android:background="#00000000"/>

            <ImageView
                android:id="@+id/email_verify_icon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/go_back_email_verify"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_baseline_email_200"
                app:tint="@color/colorPrimary"
                android:elevation="16dp"/>

            <TextView
                android:id="@+id/email_verify_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/email_verify_icon"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/verify_email"
                android:textSize="24sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/email_verify_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/email_verify_title"
                android:layout_toStartOf="@id/email_verify_username"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/hey"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/colorSubtitle"/>

            <TextView
                android:id="@+id/email_verify_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_below="@id/email_verify_title"
                android:layout_toEndOf="@id/email_verify_username"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/username"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/colorSubtitle"/>

            <TextView
                android:id="@+id/email_verify_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/email_verify_welcome"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email_verify_desc"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/colorSubtitle"/>

            <Button
                style="@style/SecondTheme"
                android:id="@+id/verify_email"
                android:layout_below="@id/email_verify_desc"
                android:background="@drawable/round_shape_white"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/verify"
                android:textColor="#FFF"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>